5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1618_2923.log
== TEST (2019-04-02 11:13:07) 
-- CODE:

j = float(input("Digite a taxa de juros: "))

qf = 1.500 * ((1+j)**36)

print(round(qf,2))
-- OUTPUT:
14365.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:13:20) 
-- CODE:

j = float(input("Digite a taxa de juros: "))

qf = 1.500 * ((1+j)**36)

print(round(qf))
-- OUTPUT:
14366
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:13:37) 
-- CODE:

j = float(input("Digite a taxa de juros: "))

qf = 1.500 * ((1+j)**36)

print(qf)
-- OUTPUT:
14365.50275713173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:13:56) 
-- CODE:

j = float(input("Digite a taxa de juros: "))

qf = 1.500 * ((1+j)**36)

print(qf)
-- OUTPUT:
14365.50275713173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:15:31) 
-- CODE:

j = float(input("Digite a taxa de juros: "))

qf = 1.500 * ((1+j)**3)

print(qf)
-- OUTPUT:
3.2200335000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:15:50) 
-- CODE:

j = float(input("Digite a taxa de juros: "))

qf = 1.500 * ((1+j)**36)

print(qf)
-- OUTPUT:
14365.50275713173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:16:23) 
-- CODE:

j = float(input("Digite a taxa de juros: "))

qf = 1.500.0 * ((1+j)**36)

print(qf)
-- ERROR:
File "XXXX", line 4
    qf = 1.500.0 * ((1+j)**36)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:16:45) 
-- CODE:

j = float(input("Digite a taxa de juros: "))

qf = 1.500 * ((1+j)**36)

print(qf)
-- OUTPUT:
14365.50275713173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:17:08) 
-- CODE:

j = float(input("Digite a taxa de juros: "))

qf = 1.500 * ((1+j)**36)

print(round(qf,2))
-- OUTPUT:
14365.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:18:07) 
-- CODE:

j = float(input("Digite a taxa de juros: "))

qf =  ((1+j)**36)

print(round(qf,2))
-- OUTPUT:
9577.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:18:26) 
-- CODE:

j = float(input("Digite a taxa de juros: "))

qf = 1500 * ((1+j)**36)

print(round(qf,2))
-- OUTPUT:
14365502.76
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:19:48) 
-- CODE:

j = float(input("Digite a taxa de juros: "))

qf = 1500 * ((1+j)**36)

print(round(qf,2))
-- EXECUTION TIME:
0.182693
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
14365502.76
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
39354.97
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
138727.07
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
